--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "migration": "tsx prisma/migrate.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.10.0",
     "@pdf-lib/fontkit": "^1.1.1",
@@ -115,6 +114,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@react-email/preview-server": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.12",
     "@types/jsonwebtoken": "^9.0.8",
